objects/Person__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Of_Approval__c</fullName>
        <label>Date Of Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Gift_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gift Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <label>IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leagacy_Id__c</fullName>
        <label>Leagacy Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_to_the_Moderators__c</fullName>
        <label>Notes to the Moderators</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Username__c</fullName>
        <formula>Receiver__r.Reddit_Username__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Reddit Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PasswordT__c</fullName>
        <label>Password</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Receiver__c</fullName>
        <label>Receiver</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Childs</relationshipLabel>
        <relationshipName>Persons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reddit_Username__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Reddit Username</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Redit_Username_Normal__c</fullName>
        <formula>lower(Reddit_Username__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Redit Username Normal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Status__c</fullName>
        <label>Registration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Registration in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Wishlist_URL__c</fullName>
        <label>Wishlist URL</label>
        <type>Url</type>
    </fields>
    <label>Person</label>
    <listViews>
        <fullName>Admin</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Reddit_Username__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Person__c.Admin</value>
        </filters>
        <label>Admin</label>
    </listViews>
    <listViews>
        <fullName>Child</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Age__c</columns>
        <columns>Receiver__c</columns>
        <columns>Wishlist_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Person__c.Child</value>
        </filters>
        <label>Child</label>
    </listViews>
    <listViews>
        <fullName>Receiver</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Reddit_Username__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>Registration_Status__c</columns>
        <columns>Rejection_Reason__c</columns>
        <columns>Notes_to_the_Moderators__c</columns>
        <columns>IP_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Person__c.Receiver</value>
        </filters>
        <label>Receiver</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RAOC People</pluralLabel>
    <recordTypes>
        <fullName>Admin</fullName>
        <active>true</active>
        <label>Admin</label>
    </recordTypes>
    <recordTypes>
        <fullName>Child</fullName>
        <active>true</active>
        <label>Child</label>
    </recordTypes>
    <recordTypes>
        <fullName>Receiver</fullName>
        <active>true</active>
        <label>Receiver</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>